# BlurViewer

./: .gitignore  BlurViewer.py  BlurViewer_Optimized.py  CONTRIBUTING.md  FreshViewer.sln  LICENSE  Makefile  OPTIMIZATION_GUIDE.md  README.de.md  README.md  README.ru.md  performance_test.py  pyproject.toml  requirements.txt  requirements_optimized.txt  version.txt
.github/workflows/: build-windows.yml
FreshViewer/: App.axaml  App.axaml.cs  FreshViewer.csproj  PR-HOTFIX-Background-Simplification.md  Program.cs  app.manifest
FreshViewer/Assets/i18n/: Strings.de.axaml  Strings.en.axaml  Strings.ru.axaml  Strings.uk.axaml
FreshViewer/Controls/: ImageViewport.cs
FreshViewer/Converters/: BooleanToValueConverter.cs
FreshViewer/LiquidGlass/: DisplacementMapManager.cs  DraggableLiquidGlassCard.cs  LiquidGlassButton.cs  LiquidGlassCard.cs  LiquidGlassControl.cs  LiquidGlassControlOld.cs  LiquidGlassDecorator.cs  LiquidGlassDrawOperation.cs  LiquidGlassPlatform.cs  ShaderDebugger.cs
FreshViewer/LiquidGlass/Assets/: LiquidGlassShaderOld.sksl
FreshViewer/LiquidGlass/Assets/Shaders/: LiquidGlassShader.sksl  LiquidGlassShader_Fixed.sksl  LiquidGlassShader_New.sksl
FreshViewer/Models/: ImageMetadata.cs
FreshViewer/Services/: ImageLoader.cs  LocalizationService.cs  MetadataBuilder.cs  ShortcutManager.cs  ThemeManager.cs
FreshViewer/Styles/: LiquidGlass.Windows.axaml  LiquidGlass.axaml
FreshViewer/ViewModels/: ImageMetadataViewModels.cs  MainWindowViewModel.cs
FreshViewer/Views/: MainWindow.axaml  MainWindow.axaml.cs
